# Ceural

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-setup.yml
src/: activations.c  activations.h  data.c  data.h  loss.c  loss.h  main.c  nn_core.c  nn_core.h  utils.h
